Fix scrolling for filter panel on mobile
- make sure it can scroll off the page
- hide search results when filter pane is open

[Finishes #173973314]

--- a/frontend/src/styles/search-results-page.scss
+++ b/frontend/src/styles/search-results-page.scss
@@ -33,7 +33,10 @@ $filterbox-height: 12rem;
 }
 
 .full {
-  height: 100%;
+  height: calc(100vh - #{$header-height});
+  overflow-y: scroll;
+  margin-top: $header-height;
+  bottom: 0;
 }
 
 .label-height {
